# DistViz

./: .gitignore  CMakeLists.txt  README.md
cpp/: main.cpp
cpp/common/: common.cpp  common.h  mpi_type_creator.hpp
cpp/embedding/: algo.hpp  csr_local.hpp  dense_mat.hpp  distributed_mat.hpp  embedding_handler.hpp  partitioner.cpp  partitioner.hpp  sparse_mat.hpp
cpp/io/: file_reader.cpp  file_reader.hpp  file_writer.hpp
cpp/knng/: common.h  global_tree_handler.hpp  knng_handler.hpp  math_operations.hpp
cpp/lib/: Mrpt.h  Mrpt_Sparse.h
cpp/net/: data_comm.hpp  process_3D_grid.cpp  process_3D_grid.hpp
test/: run_distviz.sh  run_distviz_on_mnist.sh  run_distviz_on_pendigits.sh
test/data/MNIST/: mnist.labels.txt
test/data/pen_digits/: digit_labels.txt  pendigits.txt
test/visualization/: run_visualization.py
